Fixed the blurry backdrop

--- a/styles/model.css
+++ b/styles/model.css
@@ -401,12 +401,18 @@ button.results-summary-button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  fill: rgba(52, 64, 84, 0.30);
-  backdrop-filter: blur(5px);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.backdrop {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  fill: rgba(52, 64, 84, 0.30);
+  backdrop-filter: blur(5px);
 }
 
 .learn-header, .lm-expand-header {
